2022-03-03  Philippe Normand  <pnormand@igalia.com>

        [Python3] Switch a couple glib/flatpak scripts to Python3
        https://bugs.webkit.org/show_bug.cgi?id=237377

        Reviewed by Carlos Garcia Campos.

        * Scripts/update-webkit-flatpak: Update shebang to Python3.
        * Scripts/webkit-flatpak: Ditto.
        * glib/api_test_runner.py: Ditto.
        * glib/common.py: Remove useless shebang.
        * glib/generate-inspector-gresource-manifest.py: Update shebang to Python3.
        * glib/svn-revision: Ditto.

2022-03-02  Lauro Moura  <lmoura@igalia.com>

        [Tools] Fix linux_get_crash_log.py error logging with python3
        https://bugs.webkit.org/show_bug.cgi?id=237404

        Reviewed by Fujii Hironori.

        Avoid issues generating error logs after 247736@main defaulted to
        python3.

        * Scripts/webkitpy/port/linux_get_crash_log.py:
        (GDBCrashLogGenerator._get_gdb_output): Encode returncode before
        appending to bytes.

2022-03-02  Jonathan Bedard  <jbedard@apple.com>

        [webkitcorepy] Add Terminal.open_url
        https://bugs.webkit.org/show_bug.cgi?id=237386
        <rdar://problem/89703756>

        Reviewed by Don Olmstead.

        Different platforms have different commands to open URLs.

        * Scripts/libraries/webkitcorepy/setup.py: Bump version.
        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Ditto.
        * Scripts/libraries/webkitcorepy/webkitcorepy/terminal.py:
        (Terminal): Add list of valid URL prefixes.
        (Terminal.open_url): If terminal is interactive, open the provided URL.
        * Scripts/libraries/webkitscmpy/setup.py: Bump version.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Ditto.
        * Scripts/libraries/webkitscmpy/webkitscmpy/program/setup.py:
        (Setup.main): Invoke Terminal.open_url.

2022-03-02  Chris Dumez  <cdumez@apple.com>

        Unreviewed, address post-landing feedback from Darin on r290743
