@@ -374,7 +374,7 @@ Building WebKit
 Committed r49824: <https://commits.webkit.org/r49824>
 MOCK reopen_bug 50000 with comment 'Reverted r852 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 """
@@ -391,12 +391,12 @@ Building WebKit
 Committed r49824: <https://commits.webkit.org/r49824>
 MOCK reopen_bug 50000 with comment 'Reverted r852 and r963 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 MOCK reopen_bug 50005 with comment 'Reverted r852 and r963 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 """
@@ -414,17 +414,17 @@ Building WebKit
 Committed r49824: <https://commits.webkit.org/r49824>
 MOCK reopen_bug 50000 with comment 'Reverted r852, r963 and r3001 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 MOCK reopen_bug 50005 with comment 'Reverted r852, r963 and r3001 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 MOCK reopen_bug 50004 with comment 'Reverted r852, r963 and r3001 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 """
@@ -442,12 +442,12 @@ Building WebKit
 Committed r49824: <https://commits.webkit.org/r49824>
 MOCK reopen_bug 50000 with comment 'Reverted r852, r963 and r999 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 MOCK reopen_bug 50005 with comment 'Reverted r852, r963 and r999 for reason:
 
-Reason
+Reason Description
 
 Committed r49824 (5@main): <https://commits.webkit.org/5@main>'
 """
