@@ -1,3 +1,15 @@
+2022-03-03  Jonathan Bedard  <jbedard@apple.com>
+
+        [Python-3] Invoke webkit-patch with Python 3 by default (Follow-up fix)
+        https://bugs.webkit.org/show_bug.cgi?id=231591
+        <rdar://problem/84153640>
+
+        Unreviewed follow-up fix.
+
+        * Scripts/webkitpy/tool/commands/download.py:
+        (AbstractRevertPrepCommand._prepare_state): Reason may be spread accross multiple arguments.
+        * Scripts/webkitpy/tool/commands/download_unittest.py:
+
 2022-03-03  Philippe Normand  <pnormand@igalia.com>
 
         [Python3] Switch a couple glib/flatpak scripts to Python3
